upgrades now use includes

--- a/upgrade-any.yml
+++ b/upgrade-any.yml
@@ -5,24 +5,18 @@
   become_method: sudo
   tasks:
   - name: yum upgrade
-    yum: name=* state=latest
+    include: tasks/upgrade-yum.yml
     when: ansible_pkg_mgr == "yum"
 
-  - name: ensure aptitude installed
-    apt: package=aptitude state=present
-    when: ansible_pkg_mgr == "apt"
-  - name: apt update and upgrade
-    apt: update_cache=yes upgrade=yes
+  - name: apt-upgrade
+    include: tasks/upgrade-apt.yml
     when: ansible_pkg_mgr == "apt"
 
   - name: dnf upgrade
-    dnf: name=* state=latest
+    include: tasks/upgrade-dnf.yml
     when: ansible_pkg_mgr == "dnf"
 
-  - name: eopkg update-repo 
-    command: 'eopkg update-repo'
-    when: pkgmgr == "eopkg"
   - name: eopkg upgrade
-    command: 'eopkg upgrade'
+    include: tasks/upgrade-eopkg.yml   
     when: pkgmgr == "eopkg"
 
